Bug 194751 - Dolphin not show customized folder icons in preview mode
Summary: Dolphin not show customized folder icons in preview mode
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-31 14:19 UTC by Javier G.
Modified: 2009-06-10 10:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Javier G. 2009-05-31 14:19:08 UTC
Version:           1.2.80 (using 4.2.88 (KDE 4.2.88 (KDE 4.3 >= 20090527)), Project Neon)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-11-generic

I have some customized folder icons in my home folder.
Those icons disappear when the preview mode is enabled. 
If I click again to deactivate the preview the customized icons return.


I'm using:
Qt: 4.5.1
KDE: 4.2.88 (KDE 4.2.88 (KDE 4.3 >= 20090527))
Comment 1 Heine Salte 2009-06-07 09:31:40 UTC
it's still in .89 (20090603), and when i enter a directory with custom icons, i can see the custom icons flash by briefly, before being overwritte(?) with a blank folder icon, presumably for writing thumbnails to, only most folders doesn't have images in it, to display, so they remain empty.
Comment 2 Peter Penz 2009-06-10 10:44:35 UTC
SVN commit 979579 by ppenz:

If no thumbnail for a directory content could be generated, return am
empty image.

BUG: 194751


 M  +4 -0      thumbnail.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=979579