If no thumbnail for a directory content could be generated, return am empty image.

BUG: 194751

svn path=/trunk/KDE/kdebase/runtime/; revision=979579